data/all_generated_tests/raw_wast_tests/block_StackCorruption_1884.wast
;; 5. **Invalid Operand Types within Block**:    - Description: Provide operands of incorrect types within a block, mismatched against the expected `valtype?` of the blocktype.    - Constraint: Block type validation against operand types.    - Reasoning: Mistreatment of operand types might cause stack mismatches, resulting in stack corruption when executing type-sensitive instructions.

(assert_invalid
  (module (func $invalid-operand-types-in-block
    (block (result i32) (f64.const 1.0) (i32.add))
  ))
  "type mismatch"
)